Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -232,12 +232,16 @@ print(winner)
 ---
 &nbsp;
 ### 4.5 Instrukcja if-elif-(else)
-Kolejnym rozwinięciem instrukcji `if` oraz `if-else` jest `if-elif-else`. Używamy jej wtedy kiedy chcemy wykonać jeden z wielu bloków kodu, z których każdy poprzedzony jest warunkiem logicznym. Aby dany blok kodu się wykonał, odpowiadający mu warunek logiczny musi zostać spełniony. Instrukcja `if-elif-else` składa się z następujących elementów:
-*if* - pierwszy warunek logiczny. Jeżeli zostanie spełniony to wykonuje się blok kodu pod nim
+Kolejnym rozwinięciem instrukcji `if` oraz `if-else` jest `if-elif-else`. Działa ona następująco:
+*if* - sprawdzany jest pierwszy warunek logiczny. Pod nim znajduje się wcięty blok kodu, który wykona się jeśli warunek zostanie spełniony.
 
-*elif* - kolejny warunek. Jeżeli zostanie spełniony to wykonuje się blok kodu pod nim. *elifów* może być dowolnie dużo
+*elif* - sprawdzany jest kolejny warunek. Pod nim znajduje się wcięty blok kodu, który wykona się jeśli warunek zostanie spełniony. *elifów* w całej instrukcji może być dowolnie dużo.
 
-*else* - można ale nie trzeba na koniec dodać klauzulę *else* pod którą znajduje się blok kodu, który zostanie wykonany jeżeli żaden z powyższych warunków logicznych nie został spełniony
+*else* - w bloku kodu, który znajdzie się pod *else* znajdują się instrukcje, które mają zostać wykonane w pozostałym przypadku to znaczy jeśli żaden z powyższych warunków nie został spełniony. Ten element jest opcjonalny, nie musimy definiować bloku *else*
+
+---
+> Jeżeli w instrukcji `if-elif-(else)` wejdziemy do któregoś bloku kodu, kolejne warunki nie są już sprawdzane i po wykonaniu całego bloku następuje wyjście z instrukcji warunkowej. 
+---
 
 ```python
 human_power = 6
@@ -249,9 +253,9 @@ elif human_power < zombie_power:
     print("Wygrywa zombie")
 else:
     print("Remis")
-```
-"Wygrywa człowiek"
 
+# 'Wygrywa człowiek'
+```
 
 ```python
 number_of_humans = 0
@@ -267,14 +271,12 @@ elif number_of_humans ＝＝ 0 and number_of_zombies > 0:
     print("Wygrali zombie. Wychodzimy z ifa")
 
 elif True:
-    print("Zawsze prawdziwe, ale wykona się tylko jeśli poprzednie "
-          "warunki nie będą spełnione")
+    print("Zawsze prawdziwe, ale wykona się tylko jeśli poprzednie warunki nie będą spełnione")
 
+# 'Wygrali zombie. Wychodzimy z ifa'
 ```
-"Wygrali zombie. Wychodzimy z ifa."
 
----
-Instrukcje warunkowe mogą być w sobie zagnieżdżone:
+Instrukcje warunkowe możemy zagnieżdżać:
 ```python
 MAX_NUMBER_OF_ITERATIONS = 100
 current_iteration = 90
@@ -288,15 +290,17 @@ else:
         print("Wygrywa zombie")
     else:
         print("Remis")
+
+# 'Wygrywa człowiek'
 ```
 
-
 ---
+
 **Instrukcja `if-elif-(else)` - podsumowanie:**
-- Aby wykonać dokładnie jeden spośród wielu bloków kodu do których przypisane są warunki logiczne należy użyć instrukcji `if-elif-(else)`
-- Klauzula `if` musi być użyta dokładnie raz, `elif` dowolną liczbę razy a `else` może, ale nie musi być użyte
-- Instrukcje warunkowe mogą być w sobie zagnieżdżone
-- Kiedy jeden z warunków zostanie spełniony zostaje wykonany kod po nim po czym następuje wyjście z instrukcji warunkowej 
+- Jeśli spośród kilku możliwych scenariuszy które zależne są od przypisanych im warunków logicznych chcemy wykonać tylko jeden używamy instrukcji `if-elif-(else)`
+- *if* musi być dokładnie jeden, *elifów* może być dowolna liczba natomiast *else* może być jeden lub żaden
+- Instrukcje warunkowe możemy zagnieżdżać
+- Kiedy jeden z warunków zostanie spełniony następuje wyjście z instrukcji warunkowej zaraz po wykonaniu kodu, który znajduje się w bloku pod tym warunkiem
 ---
 ---
 ---
