--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -247,6 +247,26 @@ print(3)
 # 3
 ```
 
+---
+Możliwe jest również wyprintowanie kilku obiektów jeden po drugim. Między nimi zostanie dodana spacja:
+```python
+print(character_class, character_id)
+
+# human 4
+```
+
+Separator (który domyślnie jest spacją) możemy zamienić na inny znak, na przykład na pustego stringa lub znak nowej linii:
+```python
+print(character_class, character_id, sep='')
+
+# human4
+
+
+print(character_class, character_id, sep='\n')
+# human
+# 4
+```
+
 
 #### 2.4.2 Funkcja `len`
 Służy do sprawdzenia długości (liczby elementów) obiektów, które są sekwencjami. Przykładem takiego obiektu jest zmienna tekstowa - czyli łańcuch znaków (ang. *string*) - a także różnego rodzaju [[3. Struktury danych|struktury danych]]. 
@@ -323,7 +343,7 @@ Istnieje również kilka mniej standardowych operatorów, takich jak:
 
 # 2
 ```
-// - który zwróci część całkowitą z wyniku dzielenia. W powyższym przykładzie 2.
+// - który zwróci część całkowitą z wyniku dzielenia. W powyższym przykładzie 2. Tę operację nazywamy czasem *floor division*.
 
 ```python
 13 % 5
