--- a/Python od podstaw/9. Praca z plikami.md
+++ b/Python od podstaw/9. Praca z plikami.md
@@ -5,21 +5,28 @@
 ---
 ---
 &nbsp;
-### 9.2 Pliki json
+### 9.2 Kodowanie znaków
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 9.3 pickle
+### 9.3 Pliki json
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 9.4 Biblioteka os
+### 9.4 pickle
+...
+
+---
+---
+---
+&nbsp;
+### 9.5 Biblioteka os
 ...
 
 ---
