--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -5,7 +5,7 @@
 ---
 ---
 &nbsp;
-### 6.2 Argumenty funkcji
+### 6.2 Parametry funkcji
 ...
 
 ---
@@ -19,42 +19,42 @@
 ---
 ---
 &nbsp;
-### 6.4 Argumenty z wartością domyślną
+### 6.4 Parametry z wartością domyślną
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 6.5 Kolejność argumentów
+### 6.5 Wbudowane generatory cz. 2
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 6.6 Wbudowane generatory cz. 2
+### 6.6 lambda
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 6.7 lambda
+### 6.7 arguments unpacking
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 6.8 argument unpacking
+### 6.8 args, kwargs
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 6.9 args, kwargs
+### 6.9 Kolejność parametrów
 ...
 
 ---
