Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -1,26 +1,86 @@
 ### 5.1 Pętla for
+#### 5.1.1 Funkcja `range`
+Przed rozpoczęciem nauki pisania pętli w Pythonie dobrze jest poznać wbudowaną funkcję `range` (czyli "zakres" albo "przedział").   Zwraca ona zestaw wartości, które nie pojawiają się w pamięci programu jednocześnie (tak jak np. w przypadku list) ale możemy dostać się do nich po kolei. Dzięki temu optymalizujemy zużycie pamięci. Aby stworzyć zakres wartości od 0 do 6 posłużymy się poniższym kodem:
+
+```python
+range(0, 6)
+
+# range(0, 6)
+```
+
+Ponieważ wartości z tego zakresu nie trafiają do pamięci jednocześnie to output powyższej linii kodu nie wyświetla ich wszystkich. Wie jednak jaka jest ich sekwencja i w razie potrzeby będziemy mogli się do nich po kolei dostać. 
+
+Jeżeli do funkcji `range` przekażemy tylko jeden argument - tak jak poniżej - zostanie on potraktowany jako wartość maksymalna przedziału natomiast wartością minimalną będzie 0:
+
+```python
+range(6)
+
+# range(0, 6)
+```
+
+Możemy oczywiście wstawić jako pierwszą i ostatnią wartość zakresu dowolną wartość. Ich kolejność powinna być rosnąca, w przeciwnym wypadku `range` nie zwróci nam żadnych wartości:
+
+```python
+range(3, 9)
+
+# range(3, 9)
+```
+
+Aby zobaczyć jakie wartości zawiera zakres można zrzutować go na listę:
+```python
+list(range(3, 9))
+
+# [3, 4, 5, 6, 7, 8]
+
+
+list(range(4))
+
+# [0, 1, 2, 3]
+```
+Jak widać ostatnia wartość zakresu nie wchodzi do niego - przedział jest otwarty. Podobnie jak przy slicingu.
+
+Jeśli chcemy żeby wartości w `range` rosły nie co 1 ale z innym krokiem, należy tę wartość przekazać jako trzeci argumen:
+
+```python
+list(range(0, 6, 2))
+
+# [0, 2, 4]
+```
+
+
+#### 5.1.2 Idea pętli
 ...
 
+```python
+```
+
+
+
+
+```python
+```
+
+
+
+```python
+```
 ---
 ---
 ---
 &nbsp;
 ### 5.2 Pętla while
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 5.3 Instrukcje break oraz continue
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 5.4 Zagnieżdżone pętle
-...
 
 ---
 ---
@@ -34,7 +94,6 @@
 ---
 &nbsp;
 ### 5.6 list comprehension
-...
 
 ---
 ---
