Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -1,6 +1,6 @@
 ### 5.1 Pętla for
 #### 5.1.1 Funkcja `range`
-Przed rozpoczęciem nauki pisania pętli w Pythonie dobrze jest poznać wbudowaną funkcję `range` (czyli "zakres" albo "przedział").   Zwraca ona zestaw wartości, które nie pojawiają się w pamięci programu jednocześnie (tak jak np. w przypadku list) ale możemy dostać się do nich po kolei. Dzięki temu optymalizujemy zużycie pamięci. Aby stworzyć zakres wartości od 0 do 6 posłużymy się poniższym kodem:
+Przed rozpoczęciem nauki pisania pętli w Pythonie dobrze jest poznać wbudowaną funkcję `range`.   Zwraca ona zestaw wartości, które nie pojawiają się w pamięci programu jednocześnie (tak jak np. w przypadku list) ale możemy dostać się do nich po kolei. Dzięki temu optymalizujemy zużycie pamięci. Aby stworzyć zakres wartości od 0 do 6 posłużymy się poniższym kodem:
 
 ```python
 range(0, 6)
@@ -26,7 +26,7 @@ range(3, 9)
 # range(3, 9)
 ```
 
-Aby zobaczyć jakie wartości zawiera zakres można zrzutować go na listę:
+Aby zobaczyć jakie wartości zawiera `range` można zrzutować go na listę:
 ```python
 list(range(3, 9))
 
