Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -39,7 +39,7 @@ list(range(4))
 ```
 Jak widać ostatnia wartość zakresu nie wchodzi do niego - przedział jest otwarty. Podobnie jak przy slicingu.
 
-Jeśli chcemy żeby wartości w `range` rosły nie co 1 ale z innym krokiem, należy tę wartość przekazać jako trzeci argumen:
+Jeśli chcemy żeby wartości w `range` rosły nie co 1 ale z innym krokiem, należy tę wartość przekazać jako trzeci argument:
 
 ```python
 list(range(0, 6, 2))
@@ -49,18 +49,81 @@ list(range(0, 6, 2))
 
 
 #### 5.1.2 Idea pętli
-...
+Często zdarza się że pewien fragment kodu chcemy wykonać wielokrotnie. Rozważmy symulację, w której w kolejnych krokach czasowych dzieją się określone akcje - np. postacie się poruszają albo walczą. Gdybyśmy chcieli zaimplementować to bez użycia pętli wyglądałoby to mniej więcej tak:
 
 ```python
+print("Iteracja 1\n")
+
+print("Postacie się poruszają")
+print("Postacie walczą\n\n")
+
+# ---
+
+print("Iteracja 2\n")
+
+print("Postacie się poruszają")
+print("Postacie walczą\n\n")
+
+# ---
+
+print("Iteracja 3\n")
+
+print("Postacie się poruszają")
+print("Postacie walczą\n\n"
 ```
 
+Każda iteracja (tura) wymagałaby ponownego napisania tego samego kodu. Poza tym jeśli iteracji byłoby kilkadziesiąt, kilkaset czy kilka tysięcy to tego kodu byłoby bardzo dużo. Zresztą wcale nie musimy z góry wiedzieć ile iteracji będzie miała symulacja.
 
-
+Do tego właśnie służą pętle - aby określony kawałek kodu wykonać wielokrotnie ale napisać go tylko raz. Jest to bardzo często wykorzystywany element sterowania przepływem programu. W Pythonie istnieją dwa rodzaje pętli spośród których częściej spotykaną jest pętla `for`. Używamy jej kiedy **wiemy z góry ile razy kod ma się wykonać**. W tej pętli istnieje specjalna zmienna - tzw. **iterator** - która w każdej iteracji przyjmuje określoną wartość. Powyższy kod przepisany z użyciem pętli `for` wyglądałby następująco:
 
 ```python
+for i in range(3):
+    print(f"Iteracja {i+1}\n")
+
+    print("Postacie się poruszają")
+    print("Postacie walczą\n\n")
 ```
 
+Iteratorem tej pętli jest zmienna `i` (często używamy takiej nazwy). W kolejnych iteracjach będzie ona przyjmować kolejne wartości z range'a `range(3)` czyli: 0, 1, 2. Wewnątrz każdej iteracji printujemy informację o jej numerze porządkowym (kolejno 1, 2, 3) a następnie wykonujemy określone akcje takie jak poruszanie się czy walka postaci. 
 
+Dobrą praktyką jest nieposługowanie się w kodzie liczbami, których znaczenie nie jest oczywiste, tak jak w powyższym przykładzie liczba 3 w `range`. Należy takie wartości zapisać do zmiennej i odpowiednio nazwać:
+```python
+n_of_iterations = 3
+
+for i in range(n_of_iterations):
+    print(f"Iteracja {i+1}\n")
+
+    print("Postacie się poruszają")
+    print("Postacie walczą\n\n")
+```
+
+#### 5.1.3 Iterowanie po liście
+Bardzo często można spotkać pętlę `for`, która przechodzi po kolejnych elementach jakiejś kolekcji, zazwyczaj listy. Wówczas wartość iteratora w kolejnych iteracjach to kolejne elementy tej kolekcji:
+
+```python
+for item in [1, 2, 3, 4]:
+    print(item)
+
+# 1
+# 2
+# 3
+# 4
+```
+
+```python
+numbers = [1, 2, 3, 4]
+
+for n in numbers:
+    if n % 2 ＝＝ 0:
+        print(f"Liczba {n} jest parzysta")
+    else:
+        print(f"Liczba {n} jest nieparzysta")
+
+# Liczba 1 jest nieparzysta
+# Liczba 2 jest parzysta
+# Liczba 3 jest nieparzysta
+# Liczba 4 jest parzysta
+```
 
 ```python
 ```
