Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -84,7 +84,7 @@ for i in range(3):
     print("Postacie walczą\n\n")
 ```
 
-Iteratorem tej pętli jest zmienna `i` (często używamy takiej nazwy). W kolejnych iteracjach będzie ona przyjmować kolejne wartości z range'a `range(3)` czyli: 0, 1, 2. Wewnątrz każdej iteracji printujemy informację o jej numerze porządkowym (kolejno 1, 2, 3) a następnie wykonujemy określone akcje takie jak poruszanie się czy walka postaci. 
+Iteratorem tej pętli jest zmienna `i` (często używamy takiej nazwy). W kolejnych iteracjach będzie ona przyjmować kolejne wartości z range'a `range(3)` czyli: 0, 1, 2. Wewnątrz każdej iteracji printujemy informację o jej numerze porządkowym (kolejno 1, 2, 3) a następnie wykonujemy określone akcje takie jak poruszanie się czy walka postaci. Należy pamiętać o **wcięciu oraz dwukropku**, które są elementami składni pętli.
 
 Dobrą praktyką jest nieposługowanie się w kodzie liczbami, których znaczenie nie jest oczywiste, tak jak w powyższym przykładzie liczba 3 w `range`. Należy takie wartości zapisać do zmiennej i odpowiednio nazwać:
 ```python
@@ -98,7 +98,7 @@ for i in range(n_of_iterations):
 ```
 
 #### 5.1.3 Iterowanie po liście
-Bardzo często można spotkać pętlę `for`, która przechodzi po kolejnych elementach jakiejś kolekcji, zazwyczaj listy. Wówczas wartość iteratora w kolejnych iteracjach to kolejne elementy tej kolekcji:
+Bardzo często można zobaczyć pętlę `for`, która przechodzi po kolejnych elementach jakiejś kolekcji, zazwyczaj listy. Wówczas wartość iteratora w kolejnych iteracjach to kolejne elementy tej kolekcji:
 
 ```python
 for item in [1, 2, 3, 4]:
@@ -125,8 +125,47 @@ for n in numbers:
 # Liczba 4 jest parzysta
 ```
 
+#### 5.1.4 Iterowanie po słowniku
+Możemy również iterować po słowniku. Wówczas iterator przyjmuje takie wartości jak klucze tego słownika:
+
 ```python
+human_dict = {"x": 1, "y": -4, "velocity": 5, "power": 8, "experience": 4}
+
+for feature in human_dict:
+    print(f"Feature: {feature}, value: {human_dict[feature]}")
+
+# Feature: x, value: 1
+# Feature: y, value: -4
+# Feature: velocity, value: 5
+# Feature: power, value: 8
+# Feature: experience, value: 4
 ```
+
+Jeśli chcemy dostać się zarówno do klucza jak i wartości możemy użyć funkcji `items()` oraz użyć **dwóch iteratorów**:
+
+```python
+human_dict = {"x": 1, "y": -4, "velocity": 5, "power": 8, "experience": 4}
+
+for feature, value in human_dict.items():
+    print(f"Feature: {feature}, value: {value}")
+```
+
+#### 5.1.5 Instrukcja `pass`
+Może się zdarzyć, że tymczasowo chcemy aby w ciele pętli (czyli tym co znajduje się we wciętym bloku) nie było żadnego kodu. Brak ciała pętli spowoduje błąd programu, ale możemy to obejść za pomocą instrukcji `pass`, która znaczy tyle co "nie rób niczego":
+
+```python
+for i in range(6):
+    pass
+```
+W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'a, ale nic poza tym się nie wydarzy.
+
+**Pętle `for` - podsumowanie:**
+- Funkcja `range` zwraca zakres wartości od-do rosnących o określoną wartość (krok)
+- Wartości zwrócone przez `range` nie trafiają do pamięci na raz lecz jedna po drugiej
+- Aby wykonać dany blok kodu określoną liczbę razy należy użyć pętli `for`
+- Pętla `for` posiada **iterator** czyli zmienną, która w każdej iteracji posiada inną wartość. W pewnych przypadkach iteratorów może być więcej niż jeden
+- Możemy iterować po listach, słownikach czy innych strukturach danych
+- Aby nie wykonywać w pętli żadnych instrukcji należy umieścić tam instrukcję `pass`
 ---
 ---
 ---
