Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -86,7 +86,7 @@ for i in range(3):
 
 Iteratorem tej pętli jest zmienna `i` (często używamy takiej nazwy). W kolejnych iteracjach będzie ona przyjmować kolejne wartości z range'a `range(3)` czyli: 0, 1, 2. Wewnątrz każdej iteracji printujemy informację o jej numerze porządkowym (kolejno 1, 2, 3) a następnie wykonujemy określone akcje takie jak poruszanie się czy walka postaci. Należy pamiętać o **wcięciu oraz dwukropku**, które są elementami składni pętli.
 
-Dobrą praktyką jest nieposługowanie się w kodzie liczbami, których znaczenie nie jest oczywiste, tak jak w powyższym przykładzie liczba 3 w `range`. Należy takie wartości zapisać do zmiennej i odpowiednio nazwać:
+Dobrą praktyką jest nieposługiwanie się w kodzie liczbami, których znaczenie nie jest oczywiste, tak jak w powyższym przykładzie liczba 3 w `range`. Są to tzw. *magic numbers*. Należy takie wartości zapisać do zmiennej i odpowiednio nazwać:
 ```python
 n_of_iterations = 3
 
@@ -159,7 +159,8 @@ for i in range(6):
 ```
 W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'a, ale nic poza tym się nie wydarzy.
 
-**Pętle `for` - podsumowanie:**
+---
+**Pętla `for` - podsumowanie:**
 - Funkcja `range` zwraca zakres wartości od-do rosnących o określoną wartość (krok)
 - Wartości zwrócone przez `range` nie trafiają do pamięci na raz lecz jedna po drugiej
 - Aby wykonać dany blok kodu określoną liczbę razy należy użyć pętli `for`
