Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -162,7 +162,7 @@ W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'
 ---
 **Pętla `for` - podsumowanie:**
 - Funkcja `range` zwraca zakres wartości od-do rosnących o określoną wartość (krok)
-- Wartości zwrócone przez `range` nie trafiają do pamięci na raz lecz jedna po drugiej
+- Wartości zwrócone przez `range` nie trafiają do pamięci na raz lecz jedna po drugiej, dopiero kiedy to sprowokujemy
 - Aby wykonać dany blok kodu określoną liczbę razy należy użyć pętli `for`
 - Pętla `for` posiada **iterator** czyli zmienną, która w każdej iteracji posiada inną wartość. W pewnych przypadkach iteratorów może być więcej niż jeden
 - Możemy iterować po listach, słownikach czy innych strukturach danych
@@ -172,7 +172,36 @@ W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'
 ---
 &nbsp;
 ### 5.2 Pętla while
+Oprócz pętli `for` w Pythonie mamy do dyspozycji również pętlę `while`. Wykonuje się ona tak długo jak spełniony będzie zadany w niej warunek logiczny. W poniższym przykładzie warunkiem wykonywania się pętli jest to, że zmienna `i` jest większa od 0. W każdej iteracji printujemy tę zmienną oraz dekrementujemy ją. Tym samym po czterech iteracjach warunek `i > 0` przestaje być spełniany `==` i pętla przestaje działać.
+```python
+i = 4
 
+while i > 0:
+    print(i)
+    i -= 1
+
+# 4
+# 3
+# 2
+# 1
+```
+
+
+```python
+```
+
+
+```python
+```
+
+
+
+```python
+```
+
+
+```python
+```
 ---
 ---
 ---
@@ -189,8 +218,7 @@ W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'
 ---
 ---
 &nbsp;
-### 5.5 Generatory w pętli for
-...
+### 5.5 zip i enumerate w pętli for
 
 ---
 ---
