Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -172,7 +172,7 @@ W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'
 ---
 &nbsp;
 ### 5.2 Pętla while
-Oprócz pętli `for` w Pythonie mamy do dyspozycji również pętlę `while`. Wykonuje się ona tak długo jak spełniony będzie zadany w niej warunek logiczny. W poniższym przykładzie warunkiem wykonywania się pętli jest to, że zmienna `i` jest większa od 0. W każdej iteracji printujemy tę zmienną oraz dekrementujemy ją. Tym samym po czterech iteracjach warunek `i > 0` przestaje być spełniany `==` i pętla przestaje działać.
+Oprócz pętli `for` w Pythonie mamy do dyspozycji również pętlę `while`. Wykonuje się ona tak długo jak spełniony będzie zadany w niej warunek logiczny. W poniższym przykładzie warunkiem wykonywania się pętli jest to, że zmienna `i` jest większa od 0. W każdej iteracji printujemy tę zmienną oraz dekrementujemy ją. Tym samym po czterech iteracjach warunek `i > 0` przestaje być spełniony i pętla przestaje działać.
 ```python
 i = 4
 
@@ -188,20 +188,34 @@ while i > 0:
 
 
 ```python
+number_of_humans = 10
+number_of_zombies = 10
+
+while number_of_humans > 0 and number_of_zombies > 0:
+    # Zombie gryzie człowieka
+    number_of_zombies += 1
+    number_of_humans -= 1
+    # ---
+    
+    print(f"Liczba ludzi: {number_of_humans}. Liczba zombie: {number_of_zombies}")
+
+
+# Liczba ludzi: 9. Liczba zombie: 11
+# Liczba ludzi: 8. Liczba zombie: 12
+# Liczba ludzi: 7. Liczba zombie: 13
+# Liczba ludzi: 6. Liczba zombie: 14
+# Liczba ludzi: 5. Liczba zombie: 15
+# Liczba ludzi: 4. Liczba zombie: 16
+# Liczba ludzi: 3. Liczba zombie: 17
+# Liczba ludzi: 2. Liczba zombie: 18
+# Liczba ludzi: 1. Liczba zombie: 19
+# Liczba ludzi: 0. Liczba zombie: 20
 ```
 
-
-```python
-```
-
-
-
-```python
-```
-
-
-```python
-```
+---
+Pętla `while` - podsumowanie:
+- Pętla `while` wykonuje się tak długo jak spełniony jest warunek w niej podany
+- Jeżeli warunek będzie zawsze prawdziwy pętla będzie wykonywać się w nieskończoność
 ---
 ---
 ---
