--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -186,6 +186,7 @@ while i > 0:
 # 1
 ```
 
+Kolejny przykład dotyczy sytuacji, w której wychodzimy od punktu początkowego symulacji, w którym jest 10 ludzi oraz 10 zombie. Następnie w każdej iteracji jeden człowiek zostaje zainfekowany przez zombie, zamienia się w niego a więc liczba ludzi stopniowo maleje. Kiedy dojdzie ona do 0 symulacja się zatrzymuje.
 
 ```python
 number_of_humans = 10
@@ -221,7 +222,12 @@ Pętla `while` - podsumowanie:
 ---
 &nbsp;
 ### 5.3 Instrukcje break oraz continue
+Do sterowania przepływem pętli możemy wykorzystać instrukcje `break` oraz `continue`. Ich działanie jest następujące:
 
+#### 5.3.1 `break`
+
+
+#### 5.3.2 `continue`
 ---
 ---
 ---
