Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -186,7 +186,7 @@ while i > 0:
 # 1
 ```
 
-Kolejny przykład dotyczy sytuacji, w której wychodzimy od punktu początkowego symulacji, w którym jest 10 ludzi oraz 10 zombie. Następnie w każdej iteracji jeden człowiek zostaje zainfekowany przez zombie, zamienia się w niego a więc liczba ludzi stopniowo maleje. Kiedy dojdzie ona do 0 symulacja się zatrzymuje.
+Kolejny przykład dotyczy sytuacji, w której wychodzimy od punktu początkowego symulacji, w którym jest 10 ludzi oraz 10 zombie. Następnie w każdej iteracji jeden człowiek zostaje zainfekowany przez zombie i zamienia się w niego a więc liczba ludzi stopniowo maleje. Kiedy dojdzie ona do 0 symulacja się zatrzymuje.
 
 ```python
 number_of_humans = 10
@@ -225,9 +225,74 @@ Pętla `while` - podsumowanie:
 Do sterowania przepływem pętli możemy wykorzystać instrukcje `break` oraz `continue`. Ich działanie jest następujące:
 
 #### 5.3.1 `break`
+Kiedy dojdziemy w kodzie do miejsca, w którym znajduje się instrukcja `break` wychodzimy z pętli. Ten mechanizm jest często wykorzystywany w pętli `while`, w której definicji nie ma określonego warunku kiedy mamy z niej wyjść, ale dalej w kodzie znajduje się instrukcja warunkowa, której wykonanie wiąże się z wyjściem z pętli:
+```python
+i = 4
 
+while True:
+    print(i)
+    i -= 1
+    
+    if i < 0:
+        break
+
+# 4 
+# 3
+# 2
+# 1
+# 0
+```
 
 #### 5.3.2 `continue`
+Może się zdarzyć, że dochodząc do pewnego miejsca w pętli chcemy w określonych warunkach od razu przejść do kolejnej iteracji. Aby to osiągnąć używamy instrukcji `continue`. Na przykład w poniższym kodzie printujemy wartości kolejnych elementów z listy, ale tylko jeśli są nieparzyste. W przeciwnym wypadku przechodzimy do kolejnej kolejnej iteracji.
+
+```python
+for i in [1, 2, 3, 4, 5, 6, 7, 8]:
+    if i % 2 == 0:
+        continue
+        
+    print(i)
+
+# 1
+# 3
+# 5
+# 7
+```
+
+W kolejnym przykładzie definiujemy siłę człowieka a następnie listy wartości siły kilku zombie. Następnie iterując po wszystkich zombie człowiek ocenia czy ma szansę z nimi wygrać - jeśli nie to przechodzimy do kolejnej iteracji (człowiek unika starcia) a jeśli nie to dochodzi do walki:
+```python
+human_power = 10
+zombies_power = [8, 6, 12, 9, 14, 4]
+
+z = 0
+for zombie_power in zombies_power:
+    z += 1
+
+    if zombie_power > human_power:
+        continue
+        
+    print(f"Chodź się bić, zombie nr {z}! Jestem silniejszy od ciebie o {human_power - zombie_power}")
+    # walka
+    print("Pokonałem cię!\n")
+
+
+# Chodź się bić, zombie nr 0! Jestem silniejszy od ciebie o 2
+# Pokonałem cię!
+
+# Chodź się bić, zombie nr 1! Jestem silniejszy od ciebie o 4
+# Pokonałem cię!
+
+# Chodź się bić, zombie nr 3! Jestem silniejszy od ciebie o 1
+# Pokonałem cię!
+
+# Chodź się bić, zombie nr 5! Jestem silniejszy od ciebie o 6
+# Pokonałem cię!
+```
+
+---
+Instrukcje `break` oraz `continue` - podsumowanie:
+- Aby wyjść z pętli w dowolnym jej miejscu używamy instrukcji `break`
+- Aby przejść do kolejnej iteracji używamy instrukcji `continue`
 ---
 ---
 ---
