Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -125,6 +125,8 @@ for n in numbers:
 # Liczba 4 jest parzysta
 ```
 
+Obiekt po którym możemy iterować - czyli np. lista, tupla lub inne podobne typy obiektów - nazywamy iterablą (ang. *iterable*).
+
 #### 5.1.4 Iterowanie po słowniku
 Możemy również iterować po słowniku. Wówczas iterator przyjmuje takie wartości jak klucze tego słownika:
 
@@ -165,7 +167,7 @@ W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'
 - Wartości zwrócone przez `range` nie trafiają do pamięci na raz lecz jedna po drugiej, dopiero kiedy to sprowokujemy
 - Aby wykonać dany blok kodu określoną liczbę razy należy użyć pętli `for`
 - Pętla `for` posiada **iterator** czyli zmienną, która w każdej iteracji posiada inną wartość. W pewnych przypadkach iteratorów może być więcej niż jeden
-- Możemy iterować po listach, słownikach czy innych strukturach danych
+- Możemy iterować po listach, słownikach czy innych strukturach danych. Obiekt po którym możemy iterować to iterabla (ang. *iterable*)
 - Aby nie wykonywać w pętli żadnych instrukcji należy umieścić tam instrukcję `pass`
 ---
 ---
@@ -259,7 +261,7 @@ for i in [1, 2, 3, 4, 5, 6, 7, 8]:
 # 7
 ```
 
-W kolejnym przykładzie definiujemy siłę człowieka a następnie listy wartości siły kilku zombie. Następnie iterując po wszystkich zombie człowiek ocenia czy ma szansę z nimi wygrać - jeśli nie to przechodzimy do kolejnej iteracji (człowiek unika starcia) a jeśli nie to dochodzi do walki:
+W kolejnym przykładzie definiujemy siłę człowieka a następnie listę wartości siły kilku zombie. Następnie iterując po wszystkich zombie człowiek ocenia czy ma szansę z nimi wygrać - jeśli nie to przechodzimy do kolejnej iteracji (człowiek unika starcia) a jeśli tak to dochodzi do walki:
 ```python
 human_power = 10
 zombies_power = [8, 6, 12, 9, 14, 4]
@@ -298,7 +300,26 @@ Instrukcje `break` oraz `continue` - podsumowanie:
 ---
 &nbsp;
 ### 5.4 Zagnieżdżone pętle
+Często zdarza się, że chcemy przeiterować po dwóch (lub więcej) iterablach przy czym jedna pętla znajduje się wewnątrz w drugiej. Nie jest to żadna szczególna struktura języka Python a jedynie połączenie dwóch pętli, ale warto zwrócić uwagę na taką kombinację kiedy rozpoczynamy naukę. Poniżej znajduje się prosty przykład:
 
+```python
+for i in range(2):
+    for j in range(3):
+        print(f"{i} * {j} = {i * j}")
+
+
+# 0 * 0 = 0
+# 0 * 1 = 0
+# 0 * 2 = 0
+# 1 * 0 = 0
+# 1 * 1 = 1
+# 1 * 2 = 2
+```
+
+W ten sposób możemy połączyć elementy obu iterabli na zasadzie "każdy z każdym" i wykonać na takich parach zestaw operacji - w powyższym przykładzie przemnożenie ich przez siebie.
+
+**Zagnieżdżone pętle - podsumowanie:**
+- Wewnątrz jednej pętli może znajdować się kolejna (a w niej kolejna itd.)
 ---
 ---
 ---
