Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -300,7 +300,7 @@ Instrukcje `break` oraz `continue` - podsumowanie:
 ---
 &nbsp;
 ### 5.4 Zagnieżdżone pętle
-Często zdarza się, że chcemy przeiterować po dwóch (lub więcej) iterablach przy czym jedna pętla znajduje się wewnątrz w drugiej. Nie jest to żadna szczególna struktura języka Python a jedynie połączenie dwóch pętli, ale warto zwrócić uwagę na taką kombinację kiedy rozpoczynamy naukę. Poniżej znajduje się prosty przykład:
+Często zdarza się, że chcemy przeiterować po dwóch (lub więcej) iterablach, przy czym jedna pętla znajduje się wewnątrz w drugiej. Nie jest to żadna szczególna struktura języka Python a jedynie zwykłe połączenie dwóch pętli, ale warto zwrócić uwagę na taką kombinację kiedy rozpoczynamy naukę. Poniżej znajduje się prosty przykład:
 
 ```python
 for i in range(2):
@@ -325,7 +325,58 @@ W ten sposób możemy połączyć elementy obu iterabli na zasadzie "każdy z ka
 ---
 &nbsp;
 ### 5.5 zip i enumerate w pętli for
+#### 5.5.1 `zip`
+Kiedy chcemy przeiterować po kilku iterablach *jednocześnie* możemy połączyć je za pomocą funkcji `zip`. Tak napisana pętla `for` będzie miała kilka iteratorów - tyle ile iterabli zzipujemy:
+```python
+list_x = [1, 2, 3]
+list_y = [10, 20, 30]
 
+for x, y in zip(list_x, list_y):
+    print(f"x: {x}, y: {y}")
+
+
+# x: 1, y: 10
+# x: 2, y: 20
+# x: 3, y: 30
+```
+
+
+```python
+humans_power = [12, 6, 10]
+zombies_power = [8, 9, 11]
+
+counter = 1
+
+for human, zombie in zip(humans_power, zombies_power):
+    print((f"Walka nr {counter}. Człowiek {counter} vs. zombie {counter}. "
+           f"Stosunek siły to {human} - {zombie}. Wygrywa "
+           f"{'człowiek' if human > zombie else 'zombie'}"))
+    
+    counter += 1
+
+
+# Walka nr 1. Człowiek 1 vs. zombie 1. Stosunek siły to 12 - 8. Wygrywa człowiek
+# Walka nr 2. Człowiek 2 vs. zombie 2. Stosunek siły to 6 - 9. Wygrywa zombie
+# Walka nr 3. Człowiek 3 vs. zombie 3. Stosunek siły to 10 - 11. Wygrywa zombie
+```
+
+#### 5.5.2 `enumerate`
+Jeśli chcemy przeiterować po iterabli otrzymując w pętli nie tylko jej kolejne wartości ale również licznik iteracji możemy użyć funkcji `enumerate`, która ponumeruje iteracje pętli:
+
+```python
+for h, power in enumerate(humans_power):
+    print(f"Człowiek nr {h} ma siłę równą {power}")
+
+
+# Człowiek nr 0 ma siłę równą 12
+# Człowiek nr 1 ma siłę równą 6
+# Człowiek nr 2 ma siłę równą 10
+```
+
+
+`zip` i `enumerate` w pętli `for` - podsumowanie:
+- Aby przeiterować po kilku iterablach jednocześnie używamy do funkcji `zip`
+- Aby w pętli `for` móc korzystać z licznika iteracji należy przekazać iterablę do funkcji `enumerate`
 ---
 ---
 ---
