Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -382,7 +382,48 @@ for h, power in enumerate(humans_power):
 ---
 &nbsp;
 ### 5.6 list comprehension
+Jednym z charakterystycznych dla Pythona elementów jest tzw. wyrażenie listotwórcze czyli *list comprehension*. Aby utworzyć listę korzystając w tym celu z pętli `for` zapisując wszystko w jednej linijce  możemy użyć nastepującej notacji. To co znajduje się na lewo od *for* to przepis na pojedynczy element listy.
 
+```python
+tuple_of_numbers = (1, 2, 3, 4, 5, 6, 7)
+
+[item for item in tuple_of_numbers]
+
+
+# [1, 2, 3, 4, 5, 6, 7]
+```
+
+Powyższy przykład jest trywialny i polega po prostu na "przepisaniu" listy na tuplę, ale pokazuje on najważniejsze elementy składni. Poniżej znajdują się inne przykłady. W *list comprehension* mogą znajdować się również instrukcje warunkowe:
+
+```python
+[item * 2 for item in tuple_of_numbers]
+
+# [2, 4, 6, 8, 10, 12, 14]
+```
+
+```python
+[item * 3 for item in tuple_of_numbers if item % 2 == 0]
+
+# [6, 12, 18]
+```
+
+```python
+list_of_humans = [{"id": 1, "exp": 4},
+				  {"id": 2, "exp": 0},
+				  {"id": 3, "exp": 2},
+				  {"id": 4, "exp": 3}]
+
+sum_of_experience = sum([human["exp"] for human in list_of_humans])
+print(sum_of_experience)
+
+
+# 9
+```
+
+***list comprehension* - podsumowanie:**
+- Aby w jednej linijce utworzyć listę posługując się do tego pętlą możem użyć *list comprehension*
+- Elementem *list comprehension* może być również instrukcja warunkowa
+- Kiedy tylko jest taka możliwość powinniśmy uzywać tej notacji. Sprawia ona że kod jest krótszy i bardziej elegancki
 ---
 ---
 ---
