Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -382,7 +382,7 @@ for h, power in enumerate(humans_power):
 ---
 &nbsp;
 ### 5.6 list comprehension
-Jednym z charakterystycznych dla Pythona elementów jest tzw. wyrażenie listotwórcze czyli *list comprehension*. Aby utworzyć listę korzystając w tym celu z pętli `for` zapisując wszystko w jednej linijce  możemy użyć nastepującej notacji. To co znajduje się na lewo od *for* to przepis na pojedynczy element listy.
+Jednym z charakterystycznych dla Pythona elementów języka jest tzw. wyrażenie listotwórcze czyli *list comprehension*. Aby utworzyć listę korzystając w tym celu z pętli `for` zapisując wszystko w jednej linijce  możemy użyć nastepującej notacji. To co znajduje się na lewo od *for* to przepis na pojedynczy element listy.
 
 ```python
 tuple_of_numbers = (1, 2, 3, 4, 5, 6, 7)
@@ -421,8 +421,8 @@ print(sum_of_experience)
 ```
 
 ***list comprehension* - podsumowanie:**
-- Aby w jednej linijce utworzyć listę posługując się do tego pętlą możem użyć *list comprehension*
-- Elementem *list comprehension* może być również instrukcja warunkowa
+- Aby w jednej linijce utworzyć listę posługując się do tego pętlą możemy użyć *list comprehension*
+- Elementem *list comprehension* może być instrukcja warunkowa
 - Kiedy tylko jest taka możliwość powinniśmy uzywać tej notacji. Sprawia ona że kod jest krótszy i bardziej elegancki
 ---
 ---
