Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -1,5 +1,62 @@
 ### 6.1 Procedura
+Często zdarza się, że pewien fragment kodu wykonujemy wielokrotnie w trakcie działania programu. Może on służyć do wykonania określonej operacji - na przykład obliczenia odległości między dwoma (dowolnymi) punktami albo zapisu jakiejś treści do pliku tekstowego. Zamiast wielokrotnie się powtarzać, możemy takie zadanie okodować jeden raz, umieścić je w tzw. funkcji i odwoływać się do niej za każdym razem, kiedy chcemy wykonać to zadanie. Jest to bardzo powszechne w programowaniu.
 
+Jednym z rodzajów funkcji jest procedura. To taka funkcja, która *niczego nie zwraca* a jedynie *wykonuje zestaw operacji*. O funkcjach zwracających wartość będzie więcej [[Słowo kluczowe return|poniżej]].
+
+Jednym z zadań, które jest powtarzalne w symulacji starcia między ludźmi a zombie może być strzał oddany przez człowieka do zombie. Uproszczony model takiego strzału znajduje się poniżej:
+```python
+def shoot_zombie():
+    print("AAAAOOOUUAA!!! <gunshot>  ...")
+```
+
+Definicja funkcji składa się z kilku elementów składowych. Na początku mamy słowo kluczowe `def`, które oznacza że definiujemy funkcję. Następnie znajduje się nazwa funkcji oraz para nawiasów okrągłych a na końcu dwukropke. To co znajdzie się poniżej we wciętym bloku kodu to ciało funkcji, czyli zestaw instrukcji, które zostaną wykonane podczas *wywołania funkcji*. Aby wywołać funkcję w dowolnym miejscu w kodzie należy napisać jej nazwę wraz z parą nawiasów okrągłych.
+
+Poniżej przykłady kilku podobnych funkcji wraz z wywołaniem  - tym razem strzelamy kolejno do kilku zombie:
+```python
+def shoot_two_zombies():
+    for z in range(2):
+        print("AAAAOOOUUAA!!! <gunshot>  ...")
+
+shoot_two_zombies()
+
+
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+```
+
+
+```python
+def shoot_three_zombies():
+    for z in range(3):
+        print("AAAAOOOUUAA!!! <gunshot>  ...")
+
+shoot_three_zombies()
+
+
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+```
+
+
+```python
+def shoot_five_zombies():
+    for z in range(5):
+        print("AAAAOOOUUAA!!! <gunshot>  ...")
+
+shoot_five_zombies()
+
+
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+```
+
+**Procedura - podsumowanie:**
+- Aby nie kopiować tego samego kodu za każdym razem kiedy chcemy z niego skorzystać może zamknąć go w funkcji i wywoływać ją wielokrotnie
+- Funkcja, która nie zwraca żadnej wartości to procedura
 ---
 ---
 ---
@@ -47,7 +104,6 @@
 ---
 &nbsp;
 ### 6.9 Kolejność parametrów
-...
 
 ---
 ---
