Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -96,7 +96,77 @@ Teraz wywołując funkcję `shoot_n_zombies` wystarczyć przekazać do niej *arg
 ---
 &nbsp;
 ### 6.3 Słowo kluczowe return
+Wiele funkcji nie tylko wykonuje określone instrukcje, ale również *zwraca* jedną lub więcej wartości. Oznacza to, że pewne wartości obecne wewnątrz funkcji mogą zostać przechwycone w trakcie jej wywoływania i użyte już poza funkcją. Poniżej prosty przykład:
 
+```python
+def return_true():
+    return True
+
+
+x = return_true()
+print(x)
+
+# True
+```
+
+Słowo kluczowe `return` poprzedza wartości zwracane przez funkcję. Zazwyczaj znajduje się ono na samym końcu funkcji. Nie jest to wymagane, ale kiedy dotrzemy w kodzie do tego miejsca następuje wyjście z funkcji.
+
+Poniżej kolejny przykład:
+```python
+def square_a_number(x):
+    result = x ** 2
+    return result
+    print("Ten kod się nie wykona")
+
+
+square = square_a_number(2)
+print(square)
+
+# 4
+```
+
+
+Aby zwrócić kilka wartości należy podać je po  `return` oddzielając je przecinkiem. Funkcja zwróci wówczas tuplę tych wartości.
+```python
+def solve_quadratic_equation(a, b, c):
+    delta = b**2 - 4*a*c
+    
+    x1 = (-b-delta**0.5)/(2*a)
+    x2 = (-b+delta**0.5)/(2*a)
+    
+    return x1, x2
+
+solve_quadratic_equation(1, 1, -2)
+
+# (-2.0, 1.0)
+```
+
+
+Poniżej ten sam przykład, ale z wyodrębnieniem zadania liczenia delty do oddzielnej funkcji. Dobrą praktyką jest stosowanie się do *zasady pojedynczej odpowiedzialności.* Oznacza ona, że każda funkcja powinna wykonywać tylko jedno zadanie. Poszczególne mniejsze zadania wyodrębniamy do osobnych funkcji. 
+```python
+def calculate_delta(a, b, c):
+    return b**2 - 4*a*c
+
+
+def solve_quadratic_equation(a, b, c):
+    delta = calculate_delta(a, b, c)
+    
+    x1 = (-b-delta**0.5)/(2*a)
+    x2 = (-b+delta**0.5)/(2*a)
+    
+    return x1, x2
+
+
+solve_quadratic_equation(1, 1, -2)
+
+# (-2.0, 1.0)
+```
+
+
+**Słowo kluczowe return - podsumowanie:**
+- Aby funkcja zwróciła jedną lub więcej wartości używamy słowa kluczowego `return`. Zwracane wartości będą mogły być użyte również poza funkcją
+- Użycie `return` kończy działanie funkcji. Najczęściej dzieje się to na samym końcu ciała funkcji
+- Aby zwrócić kilka wartości należy podać je po przecinku
 ---
 ---
 ---
