Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -1,7 +1,7 @@
 ### 6.1 Procedura
 Często zdarza się, że pewien fragment kodu wykonujemy wielokrotnie w trakcie działania programu. Może on służyć do wykonania określonej operacji - na przykład obliczenia odległości między dwoma (dowolnymi) punktami albo zapisu jakiejś treści do pliku tekstowego. Zamiast wielokrotnie się powtarzać, możemy takie zadanie okodować jeden raz, umieścić je w tzw. funkcji i odwoływać się do niej za każdym razem, kiedy chcemy wykonać to zadanie. Jest to bardzo powszechne w programowaniu.
 
-Jednym z rodzajów funkcji jest procedura. To taka funkcja, która *niczego nie zwraca* a jedynie *wykonuje zestaw operacji*. O funkcjach zwracających wartość będzie więcej [[Słowo kluczowe return|poniżej]].
+Jednym z rodzajów funkcji jest procedura. To taka funkcja, która *niczego nie zwraca* a jedynie *wykonuje zestaw operacji*. O funkcjach zwracających wartość będzie więcej [[6. Funkcje#6.3 Słowo kluczowe return|poniżej]].
 
 Jednym z zadań, które jest powtarzalne w symulacji starcia między ludźmi a zombie może być strzał oddany przez człowieka do zombie. Uproszczony model takiego strzału znajduje się poniżej:
 ```python
